009 ==> 277739 - Showfoto crash.
010 ==> 348344 - Crash when in Image Editor I select an image area and click Enhance->in-painting.
011 ==> 131446 - Using inpainting plugin crashes digiKam.
012 ==> 276962 - Inpainting tool crashed.
013 ==> 184731 - Cannot apply inpainting, it just hangs.
014 ==> 232926 - In-painting causes digikam to lock up.
015 ==> 319632 - digiKam crashes when in-painting applied to photo.
016 ==> 274199 - digiKam crashed when using "inpainting" tool.
017 ==> 278941 - Crash when trying to perform "In-Painting".
018 ==> 154829 - In-painting plugin doesn't use greycstoration threads.
019 ==> 105632 - CImg plugins crashes digiKam.
020 ==> 384366 - Configuration of different host port is not saved.
021 ==> 375483 - Wrong history on images taken with Samsung S3 [patch].
022 ==> 384399 - Getting dialog asking for "perform also on grouped images?" when no grouped images are selected.
023 ==> 384424 - Same expression in both branches of ternary operator in DMetadata.
024 ==> 369517 - digiKam from 5.7.0 tarball installs libvkontakte translations even if libvkontakte is disabled.
025 ==> 384079 - High CPU usage on Import when color management is enabled.
026 ==> 384425 - Suspicious condition in dcraw_emu CLI tool source code.
027 ==> 380333 - Right click - Group and Menu - View - Group do not match
028 ==> 160893 - Use UPNP server as image database.
029 ==> 384642 - Geolocation doesn't appear in digiKam for MacOS and Windows : Marble header files are not installed, only the libraries.
030 ==> 384753 - Crash / lock up when setting Icon View font in settings/configure.
031 ==> 379956 - Can't open a file with a shell script from digiKam.
032 ==> 384917 - Focus in face text field after adding a face manually should NOT affect Arrow Up and Down function.
033 ==> 351866 - Make focus to input field after adding a face rectangle as an option and not by default.
034 ==> 384696 - New Lut3D preset [patch].
035 ==> 384976 - Missing menu items.
036 ==> 